# artifacts/api-server/src/routes/index.ts
@@ -1,8 +1,12 @@
 import { Router, type IRouter } from "express";
 import healthRouter from "./health";
+import placesRouter from "./places";
+import citiesRouter from "./cities";
 
 const router: IRouter = Router();
 
 router.use(healthRouter);
+router.use(placesRouter);
+router.use(citiesRouter);
 
 export default router;
